# JayRPC

./: .gitignore  CMakeLists.txt  JayRPC.pptx  README.md
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: jayrpcapplication.h  lockqueue.h  logger.h  zookeeperutil.h
src/: CMakeLists.txt  jayrpcapplication.cc  jayrpcchannel.cc  jayrpcconfig.cc  jayrpccontroller.cc  jayrpcprovider.cc  logger.cc  rpcheader.pb.cc  rpcheader.proto  zookeeperutil.cc
src/include/: jayrpcapplication.h  jayrpcchannel.h  jayrpcconfig.h  jayrpccontroller.h  jayrpcprovider.h  rpcheader.pb.h  zookeeperutil.h
